# pysarch

./: Makefile  README.md  pyproject.toml
pysarch/: parse.py
tests/: test_can_extract_git_log.py
